--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 h1 {
-    font-size: 62px;
+    font-size: 56px;
     font-weight: 800;
     color: #ed6d44;
     line-height: 1em;
@@ -31,6 +31,15 @@ h1 {
     text-transform: lowercase;
     font-style: italic;
     letter-spacing: -.2rem;
+}
+
+h3 {
+    margin: 0;
+    color: #ed6d44;
+    font-size: 26px;
+    font-weight: 700;
+    font-style: italic;
+    text-align: justify;
 }
 
 p {
@@ -83,10 +92,27 @@ nav {
     align-items: center;
     flex-wrap: nowrap;
     min-height: 25px;
-    padding: 20px 0;
     justify-content: space-between;
-    padding: 30px 100px;
+    padding: 20px 100px;
+    color: #eae2e8;
 }
+
+footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    min-height: 25px;
+    justify-content: center;
+    padding: 20px 100px;
+    background-color: #eae2e8;
+}
+
+.footer-text {
+    margin: 0;
+    text-transform: lowercase;
+    color: #ed6d44;
+}
+
 
 .hero {
     display: flex;
@@ -110,7 +136,7 @@ nav {
     display: flex;
     flex: 1;
     width: 100%;
-    height: 350px;
+    height: 320px;
     justify-content: end;
     min-width: 250px;
 
@@ -128,7 +154,7 @@ nav {
     justify-content: center;    
     min-height: 180px;
     min-width: 180px;
-    max-width: 240px;
+    max-width: 250px;
     max-height: 250px;
 }
 
@@ -139,7 +165,7 @@ nav {
     border-radius: 1000px;
 }
 
-.button {
+.button, .cta-button {
     margin: 0;
     padding: 10px 20px;
     background-color: #7ea2a3;
@@ -147,16 +173,19 @@ nav {
     border: none;
     border-radius: 3px;
     text-decoration: none;
+    width: fit-content;
+    height: fit-content;
+    text-align: center;
 }
 
-.button:hover {
+.button:hover, .cta-button:hover {
     color: #191e1c;
     background-color: #ed6d44;
     
 }
 
 .information {
-    background-color: #eae2e8;
+    background-color: #7ea2a3;
     padding: 100px 100px;
     display: flex;
     flex-direction: row;
@@ -176,7 +205,7 @@ nav {
 .info-block p {
     text-align: center;
     margin-bottom: 0;
-    color: #191e1c;
+    color: #eae2e8;
     font-size: 18px;
     font-weight: 700;
     font-style: italic;
@@ -189,7 +218,7 @@ nav {
 }
 
 .quote p {
-    color: #ed6d44;
+    color: #7ea2a3;
     font-size: 26px;
     font-weight: 500;
     font-style: italic;
@@ -214,4 +243,35 @@ nav {
 }
 #i4 {
     filter: hue-rotate(200deg);
+}
+
+.cta {
+    padding: 100px 100px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    background-color: #7ea2a3;
+    color: #eae2e8;
+}
+
+.cta-block {
+    background-color: #191e1c;
+    width: 100%;
+    min-height: 180px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    border-radius: 10px;
+    padding: 40px 80px;
+    gap: 100px;
+}
+
+.cta-button {
+    flex: .4;
+}
+
+.cta-text-container {
+    flex: 2;
 }
