--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 body {
     display: flex;
     flex-direction: column;
-    background-color: #ed6d44;
+    background-color: #7ea2a3;
     margin: 0 auto;
 }
 
@@ -33,7 +33,7 @@ h1 {
     letter-spacing: -.2rem;
 }
 
-h3 {
+h2 {
     margin: 0;
     color: #ed6d44;
     font-size: 26px;
@@ -49,7 +49,7 @@ p {
 
 .main-container {
     margin: auto;
-    max-width: 1300px;
+    max-width: 1400px;
 }
 
 .logo {
@@ -208,7 +208,7 @@ footer {
     text-align: center;
     margin-bottom: 0;
     color: #fbfcff;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     font-style: italic;
     letter-spacing: .2rem;
@@ -259,7 +259,8 @@ footer {
 }
 
 .cta-block {
-    background-color: #e1e0e1;
+    background-color: #191e1c;
+    border: 3px solid #ed6d44;
     width: 100%;
     min-height: 180px;
     display: flex;
@@ -273,6 +274,9 @@ footer {
     gap: 25px;
 }
 
+.cta-text {
+    color: #e1e0e1;
+}
 
 .cta-button {
     flex: .4;
