--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 h1 {
-    font-size: 56px;
+    font-size: 3.2rem;
     font-weight: 800;
     color: #191e1c;
     line-height: 1em;
@@ -36,13 +36,13 @@ h1 {
 h2 {
     margin: 0;
     color: #ed6d44;
-    font-size: 26px;
+    font-size: 2rem;
     font-weight: 700;
     font-style: italic;
 }
 
 p {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     color: #191e1c;
 }
@@ -53,18 +53,17 @@ p {
 }
 
 .logo {
-    font-size: 18px;
+    font-size: 1rem;
     color: #7ea2a3;
     text-decoration: none;
     text-transform: uppercase;
-    min-width: 100px;
     font-weight: 700;
     flex: 1;
 }
 
 .nav-link {
     color: #ed6d44;
-    font-size: 16px;
+    font-size: 1rem;
     text-decoration: none;
     text-transform: lowercase;
 }
@@ -95,7 +94,7 @@ nav {
 
 footer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     min-height: 25px;
     justify-content: center;
@@ -128,7 +127,7 @@ footer {
     align-items: start;
     align-content: space-around;
     gap: 25px;
-    min-width: 400px;
+    min-width: 200px;
 }
 
 .img-container {
@@ -136,7 +135,7 @@ footer {
     flex: 1;
     width: 100%;
     height: 320px;
-    min-width: 300px;
+    min-width: 200px;
 
 }
 
@@ -208,7 +207,7 @@ footer {
     text-align: center;
     margin-bottom: 0;
     color: #fbfcff;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
     font-style: italic;
     letter-spacing: .2rem;
@@ -221,7 +220,7 @@ footer {
 
 .quote p {
     color: #7ea2a3;
-    font-size: 26px;
+    font-size: 1.5rem;
     font-weight: 500;
     font-style: italic;
     text-align: left;
@@ -286,13 +285,26 @@ footer {
     flex: 2;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
 
     .hero, .information, .quote, .cta {
         padding: 80px 20px;
     }
 
-    nav {
+    .hero {
+        padding-top: 20px;
+        gap: 20px;
+    }
+
+    .logo {
+        flex: 3;
+    }
+
+    .img-container {
+        max-height: 200px;
+    }
+
+    nav, footer {
         padding: 20px 20px;
     }
 
