--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,22 @@
     margin-bottom: 0;
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+
 body {
     display: flex;
     flex-direction: column;
     background-color: #7ea2a3;
     margin: 0 auto;
+    animation: fadeIn .5s ease-in 1;
 }
 
 .highlight {
