--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ footer {
     height: 100%;
     width: 100%;
     border-radius: 1000px;
-    border: 3px solid #e1e0e1;
+    border: 2px dashed #e1e0e1;
 }
 
 .button, .cta-button {
@@ -271,7 +271,7 @@ footer {
 
 .cta-block {
     background-color: #191e1c;
-    border: 3px solid #ed6d44;
+    border: 2px dashed #e1e0e1;
     width: 100%;
     min-height: 180px;
     display: flex;
@@ -280,7 +280,7 @@ footer {
     align-items: start;
     align-content: center;
     border-radius: 10px;
-    padding: 40px 80px;
+    padding: 80px 80px;
     flex-wrap: wrap;
     gap: 25px;
 }
@@ -299,13 +299,22 @@ footer {
 
 @media screen and (max-width: 800px) {
 
-    .hero, .information, .quote, .cta {
-        padding: 80px 20px;
+    .hero, .information, .cta {
+        padding: 100px 20px;
     }
 
     .hero {
         padding-top: 20px;
         gap: 20px;
+    }
+
+    .information {
+        gap: 80px;
+    }
+
+    .quote {
+        padding: 100px 20px;
+        border: 2px dashed #ed6d44;
     }
 
     .logo {
@@ -321,7 +330,7 @@ footer {
     }
 
     .cta-block {
-        padding: 20px 40px;
+        padding: 40px 40px;
     }
 
     body {
