--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ footer {
     align-items: start;
     align-content: space-around;
     gap: 25px;
-    min-width: 200px;
+    min-width: 400px;
 }
 
 .img-container {
@@ -146,7 +146,7 @@ footer {
     flex: 1;
     width: 100%;
     height: 320px;
-    min-width: 200px;
+    min-width: 400px;
 
 }
 
@@ -227,6 +227,8 @@ footer {
 .quote {
     background-color: #191e1c;
     padding: 100px 100px;
+    border-top: 2px dashed #e1e0e1;
+    border-bottom: 2px dashed #e1e0e1;
 }
 
 .quote p {
@@ -271,7 +273,7 @@ footer {
 
 .cta-block {
     background-color: #191e1c;
-    border: 2px dashed #e1e0e1;
+    border: 2px dashed #ed6d44;
     width: 100%;
     min-height: 180px;
     display: flex;
@@ -279,7 +281,7 @@ footer {
     justify-content: space-between;
     align-items: start;
     align-content: center;
-    border-radius: 10px;
+    border-radius: 6px;
     padding: 80px 80px;
     flex-wrap: wrap;
     gap: 25px;
@@ -309,12 +311,11 @@ footer {
     }
 
     .information {
-        gap: 80px;
+        gap: 100px;
     }
 
     .quote {
         padding: 100px 20px;
-        border: 2px dashed #ed6d44;
     }
 
     .logo {
