--- a/styles.css
+++ b/styles.css
@@ -133,21 +133,18 @@ footer {
 
 .hero-text-container {
     display: flex;
-    flex: 1;
+    flex: 1 1 400px;
     flex-direction: column;
     align-items: start;
     align-content: space-around;
     gap: 25px;
-    min-width: 300px;
 }
 
 .img-container {
     display: flex;
-    flex: 1;
+    flex: 1 1 400px;
     width: 100%;
     height: 320px;
-    min-width: 300px;
-
 }
 
 .img-container img {
@@ -299,7 +296,7 @@ footer {
     flex: 2;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 769px) {
 
     .hero, .information, .cta {
         padding: 100px 20px;
